plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.6' apply false
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    group = 'com.quantlime'
    version = '0.0.1-SNAPSHOT'

    java {
        sourceCompatibility = '21'
    }

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    if (project.name != 'common') {
        apply plugin: 'org.springframework.boot'
        apply plugin: 'java-test-fixtures'

        tasks.named('bootJar') { enabled = false }
        tasks.named('jar') { enabled = true }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.3.6"
            mavenBom "org.testcontainers:testcontainers-bom:1.21.4"
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.testcontainers:testcontainers'
        testImplementation 'org.testcontainers:junit-jupiter'
        testImplementation 'org.testcontainers:mysql'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
